--- a/index.html
+++ b/index.html
@@ -1,14 +1,12 @@
-<!-- Instantly redirect TikTok back to localhost CLI -->
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <title>TikTok Redirect</title>
-    <script>
-      location = "http://127.0.0.1:8080/callback/" + location.search;
-    </script>
-  </head>
-  <body>
-    Redirecting...
-  </body>
+<head>
+  <meta charset="utf-8" />
+  <title>TikTok OAuth Test</title>
+</head>
+<body>
+  <h1>TikTok OAuth redirect host</h1>
+  <p>If you reached this page manually – nothing to see here.  
+     TikTok will send OAuth responses to <code>callback.html</code>.</p>
+</body>
 </html>
