privacy-policy.html

--- a/privacy-policy.html
+++ b/privacy-policy.html
@@ -1,37 +1,37 @@
 <!DOCTYPE html>
-<html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <title>Privacy Policy - Desktop Uploader</title>
-</head>
-<body>
-  <h1>Privacy Policy - Desktop Uploader</h1>
-  <p><strong>Last updated:</strong> 19 June 2025</p>
+<html>
+  <head>
+    <title>Privacy Policy – Desktop Uploader</title>
+    <meta charset="utf-8" />
+  </head>
+  <body>
+    <h1>Privacy Policy – Desktop Uploader</h1>
+    <p><strong>Last updated: 19 June 2025</strong></p>
 
-  <h3>1. Who we are</h3>
-  <p>Desktop Uploader (“the App”) is a desktop tool that helps creators send finished MP4 files to their TikTok <em>Drafts</em> folder for later publishing.</p>
+    <h2>1. Who we are</h2>
+    <p>The Desktop Uploader is a tool that helps creators upload videos directly to their TikTok profiles through TikTok's official API.</p>
 
-  <h3>2. Data we collect</h3>
-  <ul>
-    <li>OAuth tokens for TikTok – stored only on your device, never on our servers.</li>
-    <li>Video files and metadata you explicitly choose to upload.</li>
-  </ul>
+    <h2>2. Data we collect</h2>
+    <ul>
+      <li>OAuth tokens for TikTok – stored only on your device, never on our servers.</li>
+      <li>Video files and metadata that you explicitly choose to upload.</li>
+    </ul>
 
-  <h3>3. How we use data</h3>
-  <p>Tokens authorise uploads; video files are transmitted only to official platform APIs. We do <strong>not</strong> sell or share your data.</p>
+    <h2>3. How we use data</h2>
+    <p>We use OAuth tokens solely to authorize uploads to TikTok. All videos and metadata are sent directly to TikTok via their official Content Posting API. We do <strong>not</strong> sell, share, or store your data on any external servers.</p>
 
-  <h3>4. Third-party services</h3>
-  <p>TikTok Content Posting API</p>
+    <h2>4. Third-party services</h2>
+    <p>This app integrates exclusively with the TikTok Content Posting API for direct content publishing.</p>
 
-  <h3>5. Security</h3>
-  <p>All API calls use HTTPS. Tokens are encrypted via your OS keychain (Keychain on macOS, DPAPI on Windows).</p>
+    <h2>5. Security</h2>
+    <p>All API requests use secure HTTPS connections. OAuth tokens are encrypted using your operating system’s secure keychain (e.g., Keychain on macOS or DPAPI on Windows).</p>
 
-  <h3>6. Your rights</h3>
-  <p>You may revoke platform access at any time in the App or in platform security settings. Delete local data by removing the App’s config folder.</p>
+    <h2>6. Your rights</h2>
+    <p>You may revoke TikTok access tokens at any time via the app or your TikTok security settings. You may also delete all local data by removing the app’s configuration files.</p>
 
-  <h3>7. Changes</h3>
-  <p>We will update this page for any future changes. Continuing to use the App after an update constitutes acceptance of the new policy.</p>
+    <h2>7. Changes</h2>
+    <p>We may update this policy at any time. Continued use of the app after changes indicates your acceptance of the updated policy.</p>
 
-  <p>Contact: <a href="mailto:calebhur39@gmail.com">calebhur39@gmail.com</a></p>
-</body>
+    <p>Contact: <a href="mailto:calebhur39@gmail.com">calebhur39@gmail.com</a></p>
+  </body>
 </html>
