terms-of-service.html

--- a/terms-of-service.html
+++ b/terms-of-service.html
@@ -9,8 +9,8 @@
   <p><strong>Effective:</strong> 19 June 2025</p>
   <ol>
     <li>You may connect only social-media accounts you own or manage.</li>
-    <li>You agree to comply with TikTok’s, YouTube’s and Instagram’s Community Guidelines when using the App.</li>
-    <li>All uploads performed by the App are saved as <em>Drafts</em>; you control whether and when to publish them publicly.</li>
+    <li>You agree to comply with TikTok’s, YouTube’s, and Instagram’s Community Guidelines when using the App.</li>
+    <li>All uploads performed by the App are posted directly to your TikTok profile using TikTok’s official Content Posting API.</li>
     <li>The App stores OAuth tokens locally and deletes video files once an upload succeeds.</li>
     <li>We may update these terms at any time. Continued use of the App after an update constitutes acceptance of the new terms.</li>
   </ol>
